--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: elixir
 elixir:
-  - 1.5.0
+  - 1.9.0
 otp_release:
-  - 19.3
+  - 22.0
 services:
-- rabbitmq
+  - rabbitmq
+addons:
+  apt:
+    packages:
+      - rabbitmq-server
