--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,8 @@
 services:
   rabbitmq:
-    image: "rabbitmq:alpine"
+    image: "rabbitmq:3.8.34-management"
     ports:
       - "5672:5672"
+    volumes:
+      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+      - ./rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
