--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,9 @@ jobs:
         ports:
           - "5672:5672"
         volumes:
-          - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-          - ./rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
+          - ${{ github.workspace }}/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+          - ${{ github.workspace }}/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
+        options: --name rabbitmq
 
 
     runs-on: ubuntu-latest
@@ -41,6 +42,12 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v4
+
+    - name: Restart RabbitMQ
+      # Restart RabbitMQ after volumes have been checked out
+      uses: docker://docker
+      with:
+        args: docker restart rabbitmq
 
     - name: Cache deps
       id: cache-deps
