change volumes for topology in config.exs

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,5 @@
 services:
   rabbitmq:
-    image: "rabbitmq:3.8.34-management"
+    image: "rabbitmq:alpine"
     ports:
       - "5672:5672"
-      - "15672:15672"
-    volumes:
-      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
-      - ./rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
