--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,6 @@
 services:
   rabbitmq:
-    image: "rabbitmq:alpine"
+    image: "rabbitmq:3.12-management-alpine"
     ports:
       - "5672:5672"
+      - "15672:15672"
