--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,8 @@
 services:
   rabbitmq:
-    image: "rabbitmq:alpine"
+    # "management" version is not required, but it makes
+    # manual testing easier
+    image: "rabbitmq:3.12-management-alpine"
     ports:
       - "5672:5672"
+      - "15672:15672"
